--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
     padding: 0;
 }
+#reset{
+background-color:red;
+color:black;
+}
 @keyframes animate {
     from { transform: translateX(0); }
     to { transform: translateX(100%); }
